# allegro_with_ft_sensors

./: .gitignore  README.md  pub_for_test_sub.ipynb
devel/: .catkin  _setup_util.py  setup.sh
devel/lib/allegro_with_sensor/: grasp  test_can_comm
devel/lib/pkgconfig/: allegro_with_sensor.pc  ros_simple_tutorial.pc
devel/lib/ros_simple_tutorial/: pub
devel/share/allegro_with_sensor/cmake/: allegro_with_sensorConfig.cmake
devel/share/ros_simple_tutorial/cmake/: ros_simple_tutorialConfig.cmake
src/allegro_with_sensor/: CMakeLists.txt  package.xml
src/allegro_with_sensor/src/: CMakeLists.txt  RockScissorsPaper.cpp  RockScissorsPaper.h  canAPI.cpp  main.cpp  main_wristFT.cpp  median_filter.cpp  test_can_comm.cpp
src/ros_simple_tutorial/: CMakeLists.txt
src/ros_simple_tutorial/src/: pub.cpp
